refact: changed more deprecations