@@ -28,8 +28,7 @@ import java.util.Properties;
 import org.apache.logging.log4j.*;
 
 /**
- *
- * @author Even Solbraa
+ * @author  Even Solbraa
  * @version Dec 2018
  */
 public class NeqSimDataBase implements neqsim.util.util.FileSystemSettings, java.io.Serializable {
@@ -58,8 +57,10 @@ public class NeqSimDataBase implements neqsim.util.util.FileSystemSettings, java
     private static String username = "remote";
     private static String password = "remote";
 
-//static String dataBaseType = "MSAccessUCanAccess";
-//public static String connectionString = "jdbc:ucanaccess://C:/Users/esol/OneDrive - Equinor/programming/neqsimdatabase/MSAccess/NeqSimDataBase.mdb;memory=true";
+    // static String dataBaseType = "MSAccessUCanAccess";
+    // public static String connectionString =
+    // "jdbc:ucanaccess://C:/Users/esol/OneDrive -
+    // Equinor/programming/neqsimdatabase/MSAccess/NeqSimDataBase.mdb;memory=true";
 
     private Statement statement = null;
     protected Connection databaseConnection = null;
@@ -178,7 +179,7 @@ public class NeqSimDataBase implements neqsim.util.util.FileSystemSettings, java
 
         try {
             if (dataBaseType.equals("MSAccess")) {
-                Class.forName("sun.jdbc.odbc.JdbcOdbcDriver").newInstance();
+                Class.forName("sun.jdbc.odbc.JdbcOdbcDriver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("H2")) {
                 Class.forName("org.h2.Driver");
             } else if (dataBaseType.equals("H2RT")) {
@@ -186,15 +187,15 @@ public class NeqSimDataBase implements neqsim.util.util.FileSystemSettings, java
             } else if (dataBaseType.equals("MSAccessUCanAccess")) {
                 Class.forName("net.ucanaccess.jdbc.UcanaccessDriver");
             } else if (dataBaseType.equals("mySQL")) {
-                Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+                Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("mySQLNTNU")) {
-                Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+                Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("Derby")) {
-                Class.forName("org.apache.derby.jdbc.EmbeddedDriver").newInstance();
+                Class.forName("org.apache.derby.jdbc.EmbeddedDriver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("oracle")) {
-                Class.forName("oracle.jdbc.driver.OracleDriver").newInstance();
+                Class.forName("oracle.jdbc.driver.OracleDriver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("oracleST")) {
-                Class.forName("oracle.jdbc.driver.OracleDriver").newInstance();
+                Class.forName("oracle.jdbc.driver.OracleDriver").getDeclaredConstructor().newInstance();
             } else {
                 Class.forName("sun.jdbc.odbc.JdbcOdbcDriver");
             }
